# pysidstation

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
docs/: FORMAT.md
src/sidstation/: __init__.py  __main__.py  _codec.py  bank.py  cli.py  enums.py  exceptions.py  patch.py  render.py
tests/: conftest.py  test_bank.py  test_cli.py  test_codec.py  test_patch.py  test_render.py  test_roundtrip.py
tests/data/: SidStation_Presets_r1.syx
